--- a/index.html
+++ b/index.html
@@ -123,14 +123,12 @@ options for all" class="More__options_for_all_Class">
 		</div>
 	</div>
 	<div data-type="Group" data-name="Social" class="Social_Class">
-		<a href="https://www.twitter.com/bidsquawk" target="_blank">
-		<img data-type="Rectangle" data-name="twitter-square-black-and-white-seeklogo.com" class="twitter_square_black_and_white_Class" src="twitter_square_black_and_white.png" srcset="twitter_square_black_and_white.png 1x, twitter_square_black_and_white@2x.png 2x"></a>
+		<img data-type="Rectangle" data-name="twitter-square-black-and-white-seeklogo.com" class="twitter_square_black_and_white_Class" src="twitter_square_black_and_white.png" srcset="twitter_square_black_and_white.png 1x, twitter_square_black_and_white@2x.png 2x">
 		<div data-type="Text" data-name="Follow our twitter for updates" class="Follow_our_twitter_for_updates_Class">
 			<span>Follow our twitter for updates</span>
 		</div>
 	</div>
-	<a href="https://forms.gle/VGxWuNG5Jr8VTmXdA" target="_blank">
-	<div data-type="Group" data-name="Early Access" class="Early_Access_Class" href="https://forms.gle/VGxWuNG5Jr8VTmXdA" target="_blank">
+	<div data-type="Group" data-name="Early Access" class="Early_Access_Class">
 		<img data-type="Rectangle" data-name="caspar-camille-rubin-XA0v5hbb7HY-unsplash" class="caspar_camille_rubin_XA0v5hbb7_Class" src="caspar_camille_rubin_XA0v5hbb7.png" srcset="caspar_camille_rubin_XA0v5hbb7.png 1x, caspar_camille_rubin_XA0v5hbb7@2x.png 2x">
 		<div data-type="Group" data-name="Group 8" class="Group_8_Class">
 			<svg data-type="Rectangle" data-name="Rectangle 7" class="Rectangle_7">
@@ -146,7 +144,7 @@ Here" class="Early_Access_Registration_Here_Class">
 		<div data-type="Text" data-name="*US applicants only" class="_US_applicants_only_Class">
 			<span>*US applicants only</span>
 		</div>
-	</div></a>
+	</div>
 	<div data-type="Group" data-name="Header" class="Header_Class">
 		<img data-type="Rectangle" data-name="head=bg" class="head_bg_Class" src="head_bg.png" srcset="head_bg.png 1x, head_bg@2x.png 2x">
 		<div data-type="Group" data-name="Group 1" class="Group_1_Class">
