--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
         </div>
     </div>
     <section class="d-block float-none d-inline-flex justify-content-center" style="width:100%;height:auto;background-color:#ffffff;">
-        <div class="d-block d-inline-flex justify-content-center align-items-center" style="background-color:rgba(255,255,255,0);min-width:auto;margin-top:5%;margin-left:0px;background-image:url(&quot;assets/img/caspar-camille-rubin-XA0v5hbb7HY-unsplash.jpg&quot;);background-size:120%;background-position:40% 60%;min-height:200px;width:1200px;height:337px;background-repeat:no-repeat;">
-            <div class="d-inline-block justify-content-center align-items-center align-content-center" style="background-color:#008080;min-width:300px;min-height:250px;margin-left:0;margin-top:1%;padding:0px;">
-                <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:35px;">Early Access</p>
-                <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:-16px;">Registration</p>
-                <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:-16px;">Here</p>
-                <p class="text-center" style="color:rgb(255,255,255);">*US applicants only</p>
-            </div>
-        </div>
+        <div class="d-block d-inline-flex justify-content-center align-items-center" style="background-color:rgba(255,255,255,0);min-width:auto;margin-top:5%;margin-left:0px;background-image:url(&quot;assets/img/caspar-camille-rubin-XA0v5hbb7HY-unsplash.jpg&quot;);background-size:120%;background-position:40% 60%;min-height:200px;width:1200px;height:337px;background-repeat:no-repeat;"><a href="https://forms.gle/VGxWuNG5Jr8VTmXdA" target="_blank"><div class="d-inline-block justify-content-center align-items-center align-content-center" style="background-color:#008080;min-width:300px;min-height:250px;margin-left:0;margin-top:1%;padding:0px;">
+    <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:35px;">Early Access</p>
+    <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:-16px;">Registration</p>
+    <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:-16px;">Here</p>
+    <p class="text-center" style="color:rgb(255,255,255);">*US applicants only</p>
+</div></a></div>
     </section>
     <p class="text-center" style="margin-top:9px;font-size:20px;color:#008080;margin-bottom:5px;">Follow us for development updates</p>
     <div class="d-inline-flex justify-content-center" style="width:100%;"><a href="https://www.twitter.com/bidsquawk" target="_blank"><img class="d-inline-block" src="assets/img/twitter-icon.png" style="height:57px;width:60px;"></a></div>
