--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BidSquawk</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -47,7 +47,7 @@
             <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">Control</p>
             <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">your money</p>
         </div>
-        <div style="height:250px;background-color:#ffffff;width:200px;margin-right:30px;margin-left:30px;"><img src="assets/img/1icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
+        <div style="height:250px;background-color:#ffffff;width:200px;margin-right:30px;margin-left:30px;"><img src="assets/img/3icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
             <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">More</p>
             <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">options for all</p>
         </div>
@@ -68,8 +68,8 @@
         <div style="background-color:rgba(255,255,255,0);background-image:url(&quot;assets/img/guy working.jpg&quot;);background-size:100%;background-position:0% 60%;width:1200px;height:380px;min-height:100px;max-height:380px;background-repeat:no-repeat;"></div>
     </section>
     <p class="text-center" style="margin-top:24px;font-size:21px;color:#008080;">BidSquawk&nbsp;Ⓒ 2020<br><br></p>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
