--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BidSquawk</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Popup-Element-Overlay.css">
+    <link rel="stylesheet" href="assets/css/Popup-Element-Overlay1.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body style="height:auto;width:100%;">
+    <div class="d-inline-flex justify-content-center" style="width:100%;">
+        <p class="text-left justify-content-center align-items-center align-content-center" style="margin-top:9px;font-size:17px;color:#cb0000;margin-bottom:5px;font-weight:normal;padding-right:10px;padding-left:10px;width:1200px;">Based on what is happening in the world as the global pandemic COVID-19 disrupts everyday life. Our Founder &amp; CEO Dwight Thorpe has agreed to offer an early access registration, this gives free access to the platform’s main resources for 2
+            months unrestricted. Unfortunately this is only available for the US but the platform will be accessible world wide at launch. God bless.</p>
+    </div>
     <div class="d-block float-none d-inline-flex justify-content-center align-items-center align-content-center align-self-center flex-wrap-reverse mt-auto" style="width:100%;">
         <div class="d-inline-block justify-content-center align-items-center align-content-center align-self-center flex-wrap" style="background-color:#ffffff;height:700px;max-width:700px;min-width:200px;width:600px;min-height:300px;max-height:700px;"><img src="assets/img/Logo-3d.png" style="width:20%;margin-left:39%;margin-top:9%;"><img src="assets/img/Banner.png" style="width:72%;padding-left:0;margin-left:13%;margin-top:13px;"><img class="d-block float-none" src="assets/img/Combo.png" style="width:70%;margin:15%;margin-top:4%;margin-bottom:0;margin-right:0;margin-left:12%;">
             <p
@@ -70,6 +76,7 @@
     <p class="text-center" style="margin-top:24px;font-size:21px;color:#008080;">BidSquawk&nbsp;Ⓒ 2020<br><br></p>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/Popup-Element-Overlay.js"></script>
 </body>
 
 </html>
