--- a/index.html
+++ b/index.html
@@ -12,73 +12,72 @@
 </head>
 
 <body style="height:auto;width:100%;">
-    <p class="text-center d-none invisible" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional, bidding for job/projects. This platform will promote good business, competitive rates and more options for both customers and freelancers.</p>
-    <div
-        class="d-inline-flex justify-content-center" style="width:100%;">
+    <p class="text-center d-none" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional.</p>
+    <div class="d-inline-flex justify-content-center" style="width:100%;">
         <p class="lead text-left justify-content-center align-items-center align-content-center" style="margin-top:9px;font-size:13px;color:#cb0000;margin-bottom:5px;font-weight:normal;padding-right:10px;padding-left:10px;width:1200px;">Based on what is happening in the world as the global pandemic COVID-19 disrupts everyday life. Our Founder &amp; CEO Dwight Thorpe has agreed to offer an early access registration, this gives free access to the platform’s main resources for 5
             months unrestricted. Unfortunately this is only available for the US but the platform will be accessible world wide at launch. God bless.</p>
+    </div>
+    <div class="d-block float-none d-inline-flex justify-content-center align-items-center align-content-center align-self-center flex-wrap-reverse mt-auto" style="width:100%;">
+        <div class="d-inline-block justify-content-center align-items-center align-content-center align-self-center flex-wrap" style="background-color:#ffffff;height:700px;max-width:700px;min-width:200px;width:600px;min-height:300px;max-height:700px;"><img src="assets/img/Logo-3d.png" style="width:20%;margin-left:39%;margin-top:9%;"><img src="assets/img/Banner.png" style="width:72%;padding-left:0;margin-left:13%;margin-top:13px;"><img class="d-block float-none" src="assets/img/Combo.png" style="width:70%;margin:15%;margin-top:4%;margin-bottom:0;margin-right:0;margin-left:12%;">
+            <p
+                class="text-center" style="margin-left:0;margin-bottom:0;margin-top:0;color:rgb(110,116,122);padding-top:23px;">Will be available on</p>
+                <div class="d-inline-flex justify-content-center flex-wrap" style="width:100%;"><img class="d-inline-block" src="assets/img/google-play-seeklogo.com.png" style="width:190px;height:48px;margin:20px;margin-right:20px;margin-left:20px;"><img class="d-inline-block" src="assets/img/apple-store-for-education-seeklogo.com.png" style="width:190px;height:43px;margin:20px;margin-right:20px;margin-left:20px;"></div>
         </div>
-        <div class="d-block float-none d-inline-flex justify-content-center align-items-center align-content-center align-self-center flex-wrap-reverse mt-auto" style="width:100%;">
-            <div class="d-inline-block justify-content-center align-items-center align-content-center align-self-center flex-wrap" style="background-color:#ffffff;height:700px;max-width:700px;min-width:200px;width:600px;min-height:300px;max-height:700px;"><img src="assets/img/Logo-3d.png" style="width:20%;margin-left:39%;margin-top:9%;"><img src="assets/img/Banner.png" style="width:72%;padding-left:0;margin-left:13%;margin-top:13px;"><img class="d-block float-none" src="assets/img/Combo.png" style="width:70%;margin:15%;margin-top:4%;margin-bottom:0;margin-right:0;margin-left:12%;">
-                <p
-                    class="text-center" style="margin-left:0;margin-bottom:0;margin-top:0;color:rgb(110,116,122);padding-top:23px;">Will be available on</p>
-                    <div class="d-inline-flex justify-content-center flex-wrap" style="width:100%;"><img class="d-inline-block" src="assets/img/google-play-seeklogo.com.png" style="width:190px;height:48px;margin:20px;margin-right:20px;margin-left:20px;"><img class="d-inline-block" src="assets/img/apple-store-for-education-seeklogo.com.png" style="width:190px;height:43px;margin:20px;margin-right:20px;margin-left:20px;"></div>
-            </div>
-            <div class="d-inline-block d-inline-flex justify-content-center align-content-center align-self-center" style="color:rgba(255,255,255,0);height:700px;background-color:#008080;min-width:200px;max-width:700px;width:600px;background-image:url(&quot;assets/img/head=bg.jpg&quot;);background-size:cover;background-position:50%;max-height:700px;min-height:300px;">
-                <div class="d-inline-block" style="width:auto;height:auto;margin-top:32%;padding:28px;">
-                    <p class="d-inline float-none" style="margin:0px;color:rgb(255,255,255);font-size:200%;">The future of</p>
-                    <p class="lead" style="margin:0px;color:rgb(255,255,255);font-size:290%;font-weight:bold;height:auto;margin-top:-22px;">Freelancing &amp;</p>
-                    <p style="margin:0px;color:rgb(255,255,255);font-size:290%;font-weight:bold;margin-top:-28px;">Services</p>
-                    <p style="margin:0px;color:rgb(255,255,255);font-size:200%;margin-top:-23px;">is here and its social</p>
-                    <p style="margin:0px;color:rgb(255,255,255);font-size:170%;margin-top:21px;">More jobs for Freelancers</p>
-                    <p style="margin:0px;color:rgb(255,255,255);font-size:170%;margin-top:-10px;">More choices for customers</p>
-                    <p style="margin:0px;color:rgb(255,255,255);font-size:170%;margin-top:-10px;">Full control of payments</p>
-                </div>
+        <div class="d-inline-block d-inline-flex justify-content-center align-content-center align-self-center" style="color:rgba(255,255,255,0);height:700px;background-color:#008080;min-width:200px;max-width:700px;width:600px;background-image:url(&quot;assets/img/head=bg.jpg&quot;);background-size:cover;background-position:50%;max-height:700px;min-height:300px;">
+            <div class="d-inline-block" style="width:auto;height:auto;margin-top:32%;padding:28px;">
+                <p class="d-inline float-none" style="margin:0px;color:rgb(255,255,255);font-size:200%;">The future of</p>
+                <p class="lead" style="margin:0px;color:rgb(255,255,255);font-size:290%;font-weight:bold;height:auto;margin-top:-22px;">Freelancing &amp;</p>
+                <p style="margin:0px;color:rgb(255,255,255);font-size:290%;font-weight:bold;margin-top:-28px;">Services</p>
+                <p style="margin:0px;color:rgb(255,255,255);font-size:200%;margin-top:-23px;">is here and its social</p>
+                <p style="margin:0px;color:rgb(255,255,255);font-size:170%;margin-top:21px;">More jobs for Freelancers</p>
+                <p style="margin:0px;color:rgb(255,255,255);font-size:170%;margin-top:-10px;">More choices for customers</p>
+                <p style="margin:0px;color:rgb(255,255,255);font-size:170%;margin-top:-10px;">Full control of payments</p>
             </div>
         </div>
-        <section class="d-block float-none d-inline-flex justify-content-center" style="width:100%;height:auto;background-color:#ffffff;">
-            <div class="d-block d-inline-flex justify-content-center align-items-center" style="background-color:rgba(255,255,255,0);min-width:auto;margin-top:5%;margin-left:0px;background-image:url(&quot;assets/img/caspar-camille-rubin-XA0v5hbb7HY-unsplash.jpg&quot;);background-size:120%;background-position:40% 60%;min-height:200px;width:1200px;height:337px;background-repeat:no-repeat;"><a href="https://forms.gle/VGxWuNG5Jr8VTmXdA" target="_blank"><div class="d-inline-block justify-content-center align-items-center align-content-center" style="background-color:#008080;min-width:300px;min-height:250px;margin-left:0;margin-top:1%;padding:0px;">
+    </div>
+    <section class="d-block float-none d-inline-flex justify-content-center" style="width:100%;height:auto;background-color:#ffffff;">
+        <div class="d-block d-inline-flex justify-content-center align-items-center" style="background-color:rgba(255,255,255,0);min-width:auto;margin-top:5%;margin-left:0px;background-image:url(&quot;assets/img/caspar-camille-rubin-XA0v5hbb7HY-unsplash.jpg&quot;);background-size:120%;background-position:40% 60%;min-height:200px;width:1200px;height:337px;background-repeat:no-repeat;"><a href="https://forms.gle/VGxWuNG5Jr8VTmXdA" target="_blank"><div class="d-inline-block justify-content-center align-items-center align-content-center" style="background-color:#008080;min-width:300px;min-height:250px;margin-left:0;margin-top:1%;padding:0px;">
     <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:35px;">Early Access</p>
     <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:-16px;">Registration</p>
     <p class="text-center" style="color:rgb(255,255,255);font-weight:bold;font-size:38px;margin:0px;margin-top:-16px;">Here</p>
     <p class="text-center" style="color:rgb(255,255,255);">*US applicants only</p>
 </div></a></div>
-        </section>
-        <p class="text-center" style="margin-top:9px;font-size:20px;color:#008080;margin-bottom:5px;">Follow us for development updates</p>
-        <div class="d-inline-flex justify-content-center" style="width:100%;"><a href="https://www.twitter.com/bidsquawk" target="_blank"><img class="d-inline-block" src="assets/img/twitter-icon.png" style="height:57px;width:60px;"></a></div>
-        <section class="d-inline-flex justify-content-center flex-wrap" style="width:100%;background-color:#ffffff;margin-top:41px;margin-bottom:0px;">
-            <div style="height:250px;background-color:#ffffff;width:200px;margin-left:30px;margin-right:30px;"><img src="assets/img/1icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
-                <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">Generate</p>
-                <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">more income</p>
-            </div>
-            <div style="height:250px;background-color:#ffffff;width:200px;margin-right:30px;margin-left:30px;"><img src="assets/img/2icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
-                <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">Control</p>
-                <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">your money</p>
-            </div>
-            <div style="height:250px;background-color:#ffffff;width:200px;margin-right:30px;margin-left:30px;"><img src="assets/img/3icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
-                <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">More</p>
-                <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">options for all</p>
-            </div>
-        </section>
-        <section class="d-block d-flex flex-column justify-content-center align-items-center" style="height:auto;background-color:#ffffff;padding-top:5%;padding-bottom:5%;">
-            <p class="text-center" style="font-size:2.5em;font-weight:bold;color:#008080;">What is Bidsquawk?</p>
-            <p class="text-center" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional, bidding for job/projects. This platform will promote good business, competitive rates and more options for both customers and freelancers.</p>
-        </section>
-        <section class="d-inline-flex justify-content-center" style="width:100%;">
-            <div style="background-color:rgba(255,255,255,0);background-image:url(&quot;assets/img/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg&quot;);background-size:100%;background-position:0% 45%;max-height:380px;min-height:100px;height:380px;background-repeat:no-repeat;width:1200px;"></div>
-        </section>
-        <section class="d-block d-flex flex-column justify-content-center align-items-center" style="height:auto;background-color:#ffffff;padding-top:5%;padding-bottom:5%;">
-            <p class="text-center" style="font-size:2.5em;font-weight:bold;color:#008080;">How is BidSquawk different?</p>
-            <p class="text-center" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">Our open social platform will allow customers and freelancers to engage each other in a more social &amp; productive way. Our platform will allow customers to offer physical in person jobs along with online remote jobs for everyone and there
-                are no restrictions for payment methods whether it be through our online escrow service, cash in hand or any other medium agreed upon by both parties.</p>
-        </section>
-        <section class="d-inline-flex justify-content-center" style="width:100%;">
-            <div style="background-color:rgba(255,255,255,0);background-image:url(&quot;assets/img/guy working.jpg&quot;);background-size:100%;background-position:0% 60%;width:1200px;height:380px;min-height:100px;max-height:380px;background-repeat:no-repeat;"></div>
-        </section>
-        <p class="text-center" style="margin-top:24px;font-size:21px;color:#008080;">BidSquawk&nbsp;Ⓒ 2020<br><br></p>
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/Popup-Element-Overlay.js"></script>
+    </section>
+    <p class="text-center" style="margin-top:9px;font-size:20px;color:#008080;margin-bottom:5px;">Follow us for development updates</p>
+    <div class="d-inline-flex justify-content-center" style="width:100%;"><a href="https://www.twitter.com/bidsquawk" target="_blank"><img class="d-inline-block" src="assets/img/twitter-icon.png" style="height:57px;width:60px;"></a></div>
+    <section class="d-inline-flex justify-content-center flex-wrap" style="width:100%;background-color:#ffffff;margin-top:41px;margin-bottom:0px;">
+        <div style="height:250px;background-color:#ffffff;width:200px;margin-left:30px;margin-right:30px;"><img src="assets/img/1icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
+            <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">Generate</p>
+            <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">more income</p>
+        </div>
+        <div style="height:250px;background-color:#ffffff;width:200px;margin-right:30px;margin-left:30px;"><img src="assets/img/2icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
+            <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">Control</p>
+            <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">your money</p>
+        </div>
+        <div style="height:250px;background-color:#ffffff;width:200px;margin-right:30px;margin-left:30px;"><img src="assets/img/3icon.png" style="width:90px;margin-top:35px;margin-left:55px;">
+            <p class="text-center" style="margin-top:11px;margin-bottom:0px;font-size:24px;color:#5b5b5b;">More</p>
+            <p class="text-center" style="margin-top:0px;color:#5b5b5b;font-size:24px;">options for all</p>
+        </div>
+    </section>
+    <section class="d-block d-flex flex-column justify-content-center align-items-center" style="height:auto;background-color:#ffffff;padding-top:5%;padding-bottom:5%;">
+        <p class="text-center" style="font-size:2.5em;font-weight:bold;color:#008080;">What is Bidsquawk?</p>
+        <p class="text-center" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional, bidding for job/projects. This platform will promote good business, competitive rates and more options for both customers and freelancers.</p>
+    </section>
+    <section class="d-inline-flex justify-content-center" style="width:100%;">
+        <div style="background-color:rgba(255,255,255,0);background-image:url(&quot;assets/img/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg&quot;);background-size:100%;background-position:0% 45%;max-height:380px;min-height:100px;height:380px;background-repeat:no-repeat;width:1200px;"></div>
+    </section>
+    <section class="d-block d-flex flex-column justify-content-center align-items-center" style="height:auto;background-color:#ffffff;padding-top:5%;padding-bottom:5%;">
+        <p class="text-center" style="font-size:2.5em;font-weight:bold;color:#008080;">How is BidSquawk different?</p>
+        <p class="text-center" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">Our open social platform will allow customers and freelancers to engage each other in a more social &amp; productive way. Our platform will allow customers to offer physical in person jobs along with online remote jobs for everyone and there are
+            no restrictions for payment methods whether it be through our online escrow service, cash in hand or any other medium agreed upon by both parties.</p>
+    </section>
+    <section class="d-inline-flex justify-content-center" style="width:100%;">
+        <div style="background-color:rgba(255,255,255,0);background-image:url(&quot;assets/img/guy working.jpg&quot;);background-size:100%;background-position:0% 60%;width:1200px;height:380px;min-height:100px;max-height:380px;background-repeat:no-repeat;"></div>
+    </section>
+    <p class="text-center" style="margin-top:24px;font-size:21px;color:#008080;">BidSquawk&nbsp;Ⓒ 2020<br><br></p>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/Popup-Element-Overlay.js"></script>
 </body>
 
 </html>
