--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="height:auto;width:100%;">
-    <p class="text-center d-none" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional.</p>
+    <p class="text-center d-none visible" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional.</p>
     <div class="d-inline-flex justify-content-center" style="width:100%;">
         <p class="lead text-left justify-content-center align-items-center align-content-center" style="margin-top:9px;font-size:13px;color:#cb0000;margin-bottom:5px;font-weight:normal;padding-right:10px;padding-left:10px;width:1200px;">Based on what is happening in the world as the global pandemic COVID-19 disrupts everyday life. Our Founder &amp; CEO Dwight Thorpe has agreed to offer an early access registration, this gives free access to the platform’s main resources for 5
             months unrestricted. Unfortunately this is only available for the US but the platform will be accessible world wide at launch. God bless.</p>
