--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body style="height:auto;width:100%;">
-    <p class="text-center d-none invisible" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional, bidding for job/projects.</p>
+<body style="height:auto;width:100%;"><p class="text-center d-none invisible" style="font-size:1.5em;color:rgb(91,91,91);min-width:310px;max-width:650px;margin-bottom:0px;">An open social platform for services where anyone can be a freelancer from the hobbyist to the professional, here customers and freelancers can engage in a more social and productive way.</p>
     <div class="d-inline-flex justify-content-center" style="width:100%;">
         <p class="lead text-left justify-content-center align-items-center align-content-center" style="margin-top:9px;font-size:13px;color:#cb0000;margin-bottom:5px;font-weight:normal;padding-right:10px;padding-left:10px;width:1200px;">Based on what is happening in the world as the global pandemic COVID-19 disrupts everyday life. Our Founder &amp; CEO Dwight Thorpe has agreed to offer an early access registration, this gives free access to the platform’s main resources for 5
             months unrestricted. Unfortunately this is only available for the US but the platform will be accessible world wide at launch. God bless.</p>
